# SimpleCompiler

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  R2.rkt~  README.md  codestyle.cfg
.github/workflows/: test.yml
c-sub/: Makefile  Makefile.env  README.md  c-sub  devlog20200214.md  init.cpp  main.cpp  test.c  test2.c
c-sub/devlog/: devlog20200214.md
c-sub/error/: error.cpp
c-sub/include/: common.h  error.h  init.h  lexical.h  parser.h  scanner.h  symbol.h  symtab.h  token.h
c-sub/lexical/: lexical.cpp  token.cpp
c-sub/parser/: parser.cpp
c-sub/scanner/: Makefile  scaner.cpp  scanner.cpp
c-sub/sym/: Makefile  symbol.cpp  symtab.cpp
c-sub/test/: test_lexical.c
cierra/: .envrc  .gitignore  AGENTS.md  Cargo.toml  README.md  bacon.toml  build.rs  dune-project  flake.nix  generate.sh  rustfmt.toml
cierra/.github/workflows/: test.yml
cierra/cierra/: Cargo.toml
cierra/cierra/src/: lib.rs  main.rs  subst.rs  taurus.rs  utils.rs  vcgen.rs
cierra/cierra/src/parser/: cst2ast.rs  taurus.rs
cierra/cierra/src/parser/taurus/: Taurus.interp  TaurusLexer.interp  TaurusLexer.tokens  tauruslexer.rs  tauruslistener.rs  taurusparser.rs
cierra/cierra/tests/: parser.rs
cierra/cierra/tests/parser/: array.c  bool2int.c  collision.c  do_while.c  mod.c  while.c
cierra/cierra/tests/snapshots/: parser__a.snap  parser__array.snap  parser__bool2int.snap  parser__cmp.snap  parser__collision.snap  parser__comment.snap  parser__div.snap  parser__do_while.snap  parser__mod.snap  parser__verify.snap  parser__while.snap
cierra/grammar/: Expr.g4
cierra/grammar/parser/: Taurus.g4
cierra/grammar/parser/.antlr/: Taurus.interp  TaurusLexer.java  TaurusParser.java
cierra/lib/: dune
cierra/macro/: Cargo.toml  README.md
cierra/macro/src/: generator.rs  lib.rs  parser.rs  value.rs
cierra/macro/tests/: snapshot.rs
cierra/macro/tests/snapshots/: snapshot__bracket_1.snap  snapshot__bracket_2.snap  snapshot__expand.snap  snapshot__long.snap  snapshot__long_nested.snap  snapshot__nested.snap  snapshot__simple.snap  snapshot__symbol_ex.snap  snapshot__unquote.snap
cierra/sexp/: Cargo.toml  README.md
cierra/sexp/src/: lib.rs  serializer.rs  utils.rs
cierra/src/: expr.rs  lib.rs  main.rs  taurus.rs
cierra/src/parser/: cst2ast.rs  mod.rs
cierra/src/parser/taurus/: Taurus.interp  tauruslexer.rs  tauruslistener.rs  taurusparser.rs
cierra/test/: dune
cierra/tests/: parser.rs
cierra/tests/parser/: div.c  verify.c
cierra/tests/snapshots/: parser__a.snap  parser__array.snap  parser__bool2int.snap  parser__cmp.snap  parser__div.snap  parser__do_while.snap  parser__mod.snap  parser__verify.snap  parser__while.snap
cmake/: 3rd.cmake  add_header.cmake  compile_config.cmake  config.h.in  functions.cmake
doc/: CMakeLists.txt
ffafchez/: Makefile  Makefile.env  README.md  scanner.c
src/: AGENTS.md  CMakeLists.txt  init.cpp  log.cpp  main.cpp
src/codegen/: codegen.cpp
src/error/: error.cpp
src/include/: ast.h  codegen.h  common.h  error.h  init.h  ir.h  ir_cfg.h  ir_cps.h  ir_dag.h  ir_ssa.h  ir_tac.h  irast.h  irgen.h  irlexer.h  irparser.h  lexical.h  log.h  lowirgen.h  parser.h  scanner.h  symbol.h  symtab.h  token.h  type.h  typechecker.h  utils.h
src/ir/: irgen.cpp  irlexer.cpp  irparser.cpp  lowirgen.cpp
src/lexical/: lexical.cpp  token.cpp
src/parser/: parser.cpp  type.cpp
src/scanner/: scanner.cpp
src/sym/: symbol.cpp  symtab.cpp
src/test/: test_demo.c  test_lexical.c  test_parser.c  test_tyck.c
src/typechecker/: eval.cpp  typechecker.cpp
test/: CMakeLists.txt
test/system_test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt  buffer_base_test.cpp
tools/: cppcheck-suppressions.xml
