[package]
name = "cierra"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "cierra-cli"
path = "src/main.rs"

[lib]
name = "cierra"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
antlr-rust = "0.3.0-beta"
array-init = "2.0"
clap = { version = "4.0", features = ["derive"] }
derive_more = "0.99.17"
internment = "0.7"
itertools = "0.10"
sexp = { path = "../sexp" }
sexp_macro = { path = "../macro" }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
glob = "0.3"
insta = "1.19"
